Added Exception handling, added new endpoints, altered table.
