# accounts/src/main/java/com/vitualwardrobe/accounts/controllers/AccountController.java
@@ -7,6 +7,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.math.BigDecimal;
 import java.util.List;
 
 @RestController
@@ -15,24 +16,35 @@ public class AccountController implements AccountApi {
     private AccountService accountService;
 
     @Override
+    public ResponseEntity<UserDTO> createUser(UserDTO newUser) {
+        return ResponseEntity.ok(null);
+    }
+
+    @Override
+    public ResponseEntity<Void> deleteUser(BigDecimal userId) {
+        return ResponseEntity.ok(null);
+    }
+
+    @Override
     public ResponseEntity<List<UserDTO>> getAllUsers() {
         return ResponseEntity.ok(accountService.getAllUsers());
-    }
-
-    @Override
-    public ResponseEntity<UserDTO> getUserById(String userId) {
-        return ResponseEntity.ok(accountService.getUserByID(userId));
-    }
-
-    @Override
-    public ResponseEntity<String> getUserRightsById(String userId) {
-        return ResponseEntity.ok(accountService.getUserRightsById(userId));
     }
 
     @Override
     public ResponseEntity<UserDTO> getUserByEmail(String userEmail) {
         return ResponseEntity.ok(accountService.getUserByEmail(userEmail));
     }
+
+    @Override
+    public ResponseEntity<UserDTO> getUserById(BigDecimal userId) {
+        return ResponseEntity.ok(accountService.getUserByID(userId));
+    }
+
+    @Override
+    public ResponseEntity<String> getUserRightsById(BigDecimal userId) {
+        return ResponseEntity.ok(accountService.getUserRightsById(userId));
+    }
+
     @Override
     public ResponseEntity<Void> updateUser(UserDTO updatedUser) {
         accountService.updateUser(updatedUser);
