# accounts/src/main/java/com/vitualwardrobe/accounts/exceptions/GlobalExceptionHandler.java
@@ -1,7 +1,46 @@
 package com.vitualwardrobe.accounts.exceptions;
 
+import org.openapitools.model.ErrorDto;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ControllerAdvice;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.ResponseStatus;
+import org.springframework.web.client.HttpServerErrorException;
+import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
 @ControllerAdvice
-public class GlobalExceptionHandler {
+public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
+    @ExceptionHandler(value = {UserNotFoundException.class})
+    @ResponseStatus(HttpStatus.NOT_FOUND)
+    public ResponseEntity<ErrorDto> handleConflict(UserNotFoundException ex) {
+        return ResponseEntity
+                .status(HttpStatus.NOT_FOUND)
+                .body(ErrorDto.builder()
+                        .code(HttpStatus.NOT_FOUND.toString())
+                        .message(ex.getMessage())
+                        .build());
+    }
+
+    @ExceptionHandler(value = {HttpServerErrorException.InternalServerError.class})
+    @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
+    public ResponseEntity<ErrorDto> handleConflict(HttpServerErrorException.InternalServerError ex) {
+        return ResponseEntity
+                .status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body(ErrorDto.builder()
+                        .code(HttpStatus.INTERNAL_SERVER_ERROR.toString())
+                        .message(ex.getMessage())
+                        .build());
+    }
+
+    @ExceptionHandler(value = {EmailUnavailableException.class})
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    public ResponseEntity<ErrorDto> handleConflict(EmailUnavailableException ex) {
+        return ResponseEntity
+                .status(HttpStatus.BAD_REQUEST)
+                .body(ErrorDto.builder()
+                        .code(HttpStatus.BAD_REQUEST.toString())
+                        .message(ex.getMessage())
+                        .build());
+    }
 }
